# nvim

./: .gitattributes  \  fib.py  init.lua  lazy-lock.json
lsp/: lua_ls.lua  sourcekit.lua
lua/config/: keymaps.lua  lazy.lua  options.lua
lua/disabled/: copilot.lua  sidekick.lua  tpope.lua
lua/plugins/: alpha-nvim.lua  ariel.lua  autopairs.lua  blink.lua  colorizer.lua  colorscheme.lua  copilot.lua  dropbar.lua  fff.lua  flash.lua  fzf-lua.lua  hardtime.lua  lualine.lua  neo-tree.lua  new-file-template.lua  nvim-dap.lua  nvim-treesitter.lua  oil.lua  persistence.lua  quicker.lua  snacks.lua  supermaven.lua  template.lua  tiny-inline-diagnostic.lua  undotree.lua  vimtex.lua  which-key.lua
lua/plugins/acp/: avante.lua  codecompanion.lua
lua/plugins/bloat/: hardtime.lua  presence.lua  triforce.lua
lua/plugins/git/: diffview.lua  gitsigns.lua  neogit.lua
lua/plugins/gpt/: avante.lua  copilot.lua  mcphub.lua  supermaven.lua
lua/plugins/lsp/: conform.lua  nvim-lint.lua  nvim-lspconfig.lua
lua/roanm/: lazy.lua
lua/roanm/core/: init.lua  keymaps.lua  options.lua
lua/roanm/disabled/: noice.lua
lua/roanm/plugins/: alpha-nvim.lua  blink.lua  bufferline.lua  colorizer.lua  colorscheme.lua  fzf-lua.lua  harpoon.lua  indent-blankline.lua  leetcode.lua  lsp_lines.lua  lualine.lua  markview.lua  mini.lua  neo-tree.lua  noice.lua  nvim-cmp.lua  nvim-treesitter.lua  obsidian.lua  oil.lua  presence.lua  refactoring.lua  substitute.lua  telescope.lua  template.lua  transparent.lua  undotree.lua  unused-nvim-cmp.lua  vimtex.lua  visual-whitespace.lua  which-key.lua
lua/roanm/plugins/bloat/: leetcode.lua
lua/roanm/plugins/git/: diffview.lua  gitgraph.lua  gitsigns.lua  lazygit.lua  neogit.lua
lua/roanm/plugins/gpt/: avante.lua  copilot.lua  cursortab.lua
lua/roanm/plugins/lsp/: mason.lua  (+5 more)
lua/roanm/templates/txt/: CMakeLists.txt
lua/templates/: c.lua  lua.lua  nix.lua  tex.lua  zig.lua
luasnippets/: tex.lua
(+2 files in other folders)
